# nRF54L15-BLE-Sensorhub

./: .gitignore  CMakeLists.txt  README.rst  app.overlay  build.bat  flash.bat  index.html  prj.conf
src/: main.c  main_backup.c
src/bluetooth/: ble_bas.c  ble_bas.h  ble_dis.c  ble_dis.h  ble_service.c  ble_service.h
src/config/: app_config.h
src/hardware/: imu_manager.c  imu_manager.h  pdm_handler.c  pdm_handler.h  power_control.c  power_control.h
src/processing/: dsp_processor.c  dsp_processor.h
src/system/: battery_monitor.c  battery_monitor.h  power_manager.c  power_manager.h  watchdog.c  watchdog.h
